Added some styling to start off

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-<p>John Kautzner</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>John's Coding Journey</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"
+    </head>
+    <body>
+        <article>
+            <header>
+                <h1>John's Coding Journey &lt;3</h1>
+                <img src="images\professional photo.jpg" />
+                <h4 class="purpose">This is the story of how John gained his coding skills.</h4>
+                <h3 class="chapters">Chapters</h3>
+                <ul>
+                    <li><a href="#beginning">Beginning</a></li>
+                    <li><a href="#rediscovery">Rediscovery</a></li>
+                    <li><a href="#bootcamp">Bootcamp</a></li>
+                    <li><a href="#working">Working in the Field</a></li>
+                    <li><a href="#launchcode">LaunchCode</a></li>
+                </ul>
+            </header>
+            <main>
+                <br>
+                <h3 id="beginning">Beginning</h3>
+                <p>John first came into contact with computer 
+                    science while pursuing his bachelor's 
+                    degree at Southeast Missouri State 
+                    University.  He took a class in C++ 
+                    and loved it.  He thought it was so cool 
+                    that you could "solve problems once and 
+                    for all" by writing a program that could 
+                    solve a generalized problem.  It took a 
+                    higher initial investment of time than 
+                    calculating something by hand, but 
+                    eventually, if the problem needed to be 
+                    solved enough times with different 
+                    parameters, the program could save a LOT 
+                    of time.
+                </p><br>
+                <h3 id="rediscovery">Rediscovery</h3>
+                <p>After graduating, John became an Adjunct 
+                    instructor at a community college.  
+                    Unfortunately, John wanted a career and 
+                    his position with the college was only 
+                    part-time.  When he saw the full list of 
+                    adjunct instructors in the math 
+                    department, he realized it would be <em>
+                    years</em> before he could become a fulltime 
+                    instructor.  John needed to get into a new 
+                    field.  After talking with a friend in 
+                    the tech field, he decided to pursue 
+                    programming.
+                </p>
+                <p>John used online resources and guidance from 
+                    his friend to get started.  However, After 
+                    a while it became very difficult to find 
+                    resources at the right level.
+                </p><br>
+                <h3 id="bootcamp">Bootcamp</h3>
+                <p>
+                    John decided it would be worth it to join 
+                    a programming bootcamp because of the time 
+                    it would save him.  He enrolled in one.  
+                    However, he did not receive the education 
+                    he expected.  There were major problems with 
+                    the program, but he was able to learn enough 
+                    to get a job in the field.
+                </p><br>
+                <h3 id="working">Working in the Field</h3>
+                <p>
+                    As a software developer, John was behind in 
+                    terms of skill.  He struggled a lot, but made 
+                    improvements over time.  His company found a 
+                    place where he could become successful.
+                </p><br>
+                <h3 id="launchcode">LaunchCode</h3>
+                <p>
+                    John really wanted to improve himself 
+                    professionally.  In order to do so, he knew 
+                    that he would have to strengthen his fundamentals 
+                    and learn the things he had missed along the way.  
+                    He joined LaunchCode to this end.  He didn't learn 
+                    much new in the first Unit, but by the first week of 
+                    Unit 2, he could tell that he was going to learn a lot.  
+                    Stay tuned... 
+                </p><br>
+            </main>
+            <footer>
+                <p id="contact">The author of this article lives, works, 
+                    and plays in St Louis, MO.  Feel free to 
+                    <a href="mailto:misterkautzner@gmail.com">
+                        contact
+                    </a>.
+                </p>
+            </footer>
+        </article>
+    </body>
+</html>
