Finished... for now.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <body>
         <article>
             <header>
+                <div>
                 <h1>John's Coding Journey &lt;3</h1>
                 <img src="images\professional photo.jpg" />
-                <h4 class="purpose">This is the story of how John gained his coding skills.</h4>
-                <h3 class="chapters">Chapters</h3>
+                <h4 id="purpose">This is the story of how John gained his coding skills.</h4>
+                <br>
+            </div>
+            <div>
+                <h2 class="chapters">Chapters</h3>
                 <ul>
                     <li><a href="#beginning">Beginning</a></li>
                     <li><a href="#rediscovery">Rediscovery</a></li>
@@ -18,8 +22,11 @@
                     <li><a href="#working">Working in the Field</a></li>
                     <li><a href="#launchcode">LaunchCode</a></li>
                 </ul>
+            </div>
+                <hr>
             </header>
             <main>
+                <div>
                 <br>
                 <h3 id="beginning">Beginning</h3>
                 <p>John first came into contact with computer 
@@ -36,7 +43,12 @@
                     solved enough times with different 
                     parameters, the program could save a LOT 
                     of time.
-                </p><br>
+                </p>
+                <br>
+            </div>
+                <hr>
+                <div>
+                <br>
                 <h3 id="rediscovery">Rediscovery</h3>
                 <p>After graduating, John became an Adjunct 
                     instructor at a community college.  
@@ -44,8 +56,8 @@
                     his position with the college was only 
                     part-time.  When he saw the full list of 
                     adjunct instructors in the math 
-                    department, he realized it would be <em>
-                    years</em> before he could become a fulltime 
+                    department, he realized it would be
+                    years before he could become a fulltime 
                     instructor.  John needed to get into a new 
                     field.  After talking with a friend in 
                     the tech field, he decided to pursue 
@@ -55,7 +67,12 @@
                     his friend to get started.  However, After 
                     a while it became very difficult to find 
                     resources at the right level.
-                </p><br>
+                </p>
+                <br>
+            </div>
+                <hr>
+                <div>
+                <br>
                 <h3 id="bootcamp">Bootcamp</h3>
                 <p>
                     John decided it would be worth it to join 
@@ -65,14 +82,24 @@
                     he expected.  There were major problems with 
                     the program, but he was able to learn enough 
                     to get a job in the field.
-                </p><br>
+                </p>
+                <br>
+            </div>
+                <hr>
+                <div>
+                <br>
                 <h3 id="working">Working in the Field</h3>
                 <p>
                     As a software developer, John was behind in 
                     terms of skill.  He struggled a lot, but made 
                     improvements over time.  His company found a 
                     place where he could become successful.
-                </p><br>
+                </p>
+                <br>
+            </div>
+                <hr>
+                <div>
+                <br>
                 <h3 id="launchcode">LaunchCode</h3>
                 <p>
                     John really wanted to improve himself 
@@ -83,15 +110,19 @@
                     much new in the first Unit, but by the first week of 
                     Unit 2, he could tell that he was going to learn a lot.  
                     Stay tuned... 
-                </p><br>
+                </p>
+                <br>
+            </div>
+                <hr>
+                <br>
             </main>
             <footer>
+                <div>
                 <p id="contact">The author of this article lives, works, 
-                    and plays in St Louis, MO.  Feel free to 
-                    <a href="mailto:misterkautzner@gmail.com">
-                        contact
-                    </a>.
+                    and plays in St Louis, MO.  Feel free to
+                    <a href="mailto:misterkautzner@gmail.com">contact</a>.
                 </p>
+            </div>
             </footer>
         </article>
     </body>
